# GFI

./: .dockerignore  .gitignore  AGENTS.md  README.md  pyproject.toml  temp_test_subset.csv
configs/data/: dataset_a.yaml  dataset_b.yaml
configs/experiment/: exp001.yaml  exp002.yaml
configs/model/: custom_variant.yaml  ifrnet_base.yaml
configs/paths/: default.yaml
configs/run/: analyze_dataset_vfx_0416.yaml  inference_finetuning_0416.yaml  inference_finetuning_0423.yaml  inference_finetuning_0423_video.yaml  inference_flowaprox_0423.yaml  inference_flowaprox_layer_1_0507.yaml  inference_flowaprox_layer_1_0507_video.yaml  inference_flowaprox_layer_4_0423.yaml  inference_flowaprox_layer_4_0507.yaml  inference_flowaprox_layer_4_0507_video.yaml  inference_pretrained.yaml  inference_residual_0416.yaml  inference_residual_0416_video.yaml  inference_residual_layer_4_0507.yaml  inference_results_to_video_smoke_arpg2_dual_ifrnet.yaml  inference_smoke_arpg2_dual_ifrnet.yaml  train_VFX_0326.yaml  train_VFX_0416.yaml  train_flow_approx_0416.yaml  train_flow_approx_0423.yaml  train_flow_approx_0507.yaml  train_flow_approx_0507_layer_1.yaml  train_flow_approx_0507_v2.yaml  train_flow_approx_VFX_0416.yaml  train_residual_0423.yaml  train_residual_0507.yaml  train_smoke_arpg2_dual_ifrnet.yaml
docker/: zshrc
scripts/: analyze_dataset.py  cache_vfi_samples.py  cache_vfi_samples_npz.py  inference.py  inference_results_to_video.py  plot_test_metrics.py  preprocess_dataset.py  train.py  train_flow_approx.py  train_timing.py
src/: __init__.py
tests/: README.md
(+44 files in other folders)
