[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[project]
name = "gfi-research-scaffold"
version = "0.1.0"
description = "Academic scaffold for IFRNet-based model research with custom datasets."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "matplotlib",
    "numpy",
    "opencv-python-headless",
    "pandas",
    "scikit-image",
    "scikit-learn",
    "tqdm",
    "imageio",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]
